--- a/gok/trunk/PKGBUILD
+++ b/gok/trunk/PKGBUILD
@@ -2,25 +2,22 @@
 # Maintainer: Jan de Groot <jgc@archlinux.org>
 
 pkgname=gok
-pkgver=2.28.1
+pkgver=2.29.2
 pkgrel=1
 pkgdesc="Gnome Onscreen Keyboard"
 arch=(i686 x86_64)
 license=('GPL')
 url="http://www.gnome.org"
-depends=('gnome-speech>=0.4.25' 'at-spi>=1.28.1' 'libwnck>=2.28.0' 'hicolor-icon-theme' 'libcanberra>=0.21' 'libglade>=2.6.4' 'gconf>=2.28.0')
+depends=('gnome-speech>=0.4.25' 'at-spi>=1.29.90' 'libwnck>=2.29.6' 'hicolor-icon-theme' 'libcanberra>=0.21' 'gconf>=2.28.0')
 makedepends=('intltool' 'pkgconfig' 'gnome-doc-utils>=0.18.0')
 options=('!emptydirs')
 groups=('gnome-extra')
 install=gok.install
-source=(http://ftp.gnome.org/pub/gnome/sources/${pkgname}/2.28/${pkgname}-${pkgver}.tar.bz2
-        lm.patch)
-sha256sums=('121ab98605b0981c131cdc49bf190ba81e9a9d5c720fa94ed2fb3193f121e904'
-            '2da4a8e5f1f3726c31fe8fd465f33b42959da68692cddf01e79430afec898b90')
+source=(http://ftp.gnome.org/pub/gnome/sources/${pkgname}/2.29/${pkgname}-${pkgver}.tar.bz2)
+sha256sums=('744307749c06fb81b3fc359affd161985104b7996ad7bef92a8ff4f560152d53')
 
 build() {
   cd "${srcdir}/${pkgname}-${pkgver}"
-  patch -Np1 -i "${srcdir}/lm.patch" || return 1
   ./configure --prefix=/usr --sysconfdir=/etc \
       --localstatedir=/var || return 1
   make || return 1
