--- a/modemmanager/trunk/PKGBUILD
+++ b/modemmanager/trunk/PKGBUILD
@@ -3,12 +3,12 @@
 pkgname=modemmanager
 _realname=ModemManager
 pkgver=0.3
-pkgrel=1
+pkgrel=2
 pkgdesc="Mobile broadband modem management service"
 arch=('i686' 'x86_64')
 url="http://cgit.freedesktop.org/ModemManager/ModemManager/"
 license=('GPL2')
-depends=('dbus-glib>=0.82' 'udev>=146' 'ppp')
+depends=('dbus-glib>=0.82' 'udev>=146' 'ppp>=2.4.5')
 options=('!libtool' 'force')
 source=(http://download.gnome.org/sources/${_realname}/0.3/${_realname}-${pkgver}.tar.bz2)
 sha256sums=('6bcfce70a26ed9c3162ba23fd0591029441c57e146d7ff4b2fd8036eb50945da')
