--- a/mkvtoolnix/trunk/PKGBUILD
+++ b/mkvtoolnix/trunk/PKGBUILD
@@ -3,17 +3,17 @@
 # Contributor: 03/08/04 <lefungus@altern.org>
 
 pkgname=mkvtoolnix
-pkgver=3.1.0
+pkgver=3.2.0
 pkgrel=1
 pkgdesc="Set of tools to create, edit and inspect Matroska files"
 arch=('i686' 'x86_64')
-license=('GPL2')
+license=('GPL')
 url="http://www.bunkus.org/videotools/mkvtoolnix/index.html"
-depends=('libmatroska>=0.8.1' 'flac>=1.1.4' 'libvorbis' 'file' 'boost>=1.41.0' 'lzo2')
+depends=('libmatroska' 'flac' 'libvorbis' 'file' 'boost' 'lzo2')
 makedepends=('wxgtk')
 optdepends=('wxgtk: mkvmerge and mkvinfo GUI')
 source=("http://www.bunkus.org/videotools/${pkgname}/sources/${pkgname}-${pkgver}.tar.bz2")
-md5sums=('9441ab0b72f34cd8d5492598a65e1dd5')
+md5sums=('9bf31280cb07870771e69de0287dc769')
 
 build() {
   cd "${srcdir}/${pkgname}-${pkgver}"
