--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -4,7 +4,7 @@
 # Contributor: sergeantspoon <sergeantspoon@archlinux.us>
 
 pkgname=libssh
-pkgver=0.4.0
+pkgver=0.4.1
 pkgrel=1 
 pkgdesc="Library for accessing ssh client services through C libraries"
 url="http://www.libssh.org/"
@@ -13,7 +13,7 @@ arch=('i686' 'x86_64')
 depends=('openssl')
 makedepends=('cmake' 'automoc4')
 source=(http://www.libssh.org/files/$pkgname-$pkgver.tar.gz)
-md5sums=('bcb3d567bacd54c9f6b5b0e8c4d1102c')
+md5sums=('258402bf1fabf664daeba4e5fc7a8d09')
 
 build() {
   cd ${srcdir}
@@ -23,5 +23,9 @@ build() {
     -DCMAKE_INSTALL_PREFIX=/usr \
     -DCMAKE_BUILD_TYPE=Release || return 1
   make || return 1
+}
+
+package(){
+  cd ${srcdir}/build
   make DESTDIR=${pkgdir} install || return 1
 }
