--- a/vim-bufexplorer/trunk/PKGBUILD
+++ b/vim-bufexplorer/trunk/PKGBUILD
@@ -1,12 +1,13 @@
 #$Id$
-#Maintainer: Aaron Griffin <aaron@archlinux.org>
+#Contributor: Aaron Griffin <aaron@archlinux.org>
+#Maintainer: Daniel J Griffiths <ghost1227@archlinux.us>
 
 pkgname=vim-bufexplorer
 pkgver=7.2.2
 _scriptid=9524
-pkgrel=3
+pkgrel=4
 pkgdesc="A simple buffer list/switcher for vim "
-arch=(i686 x86_64)
+arch=('any')
 url="http://www.vim.org/scripts/script.php?script_id=42"
 license=('custom')
 depends=('vim>=7.0')
@@ -18,18 +19,23 @@ md5sums=('1013ceca174d77758284c5f44a9d3f48'
          'b1a7f22e90469abdad3ffd55120e6887')
 
 build() {
-  cd $srcdir
-  mv download_script.php?src_id=$_scriptid bufexplorer.zip
-  bsdtar -xf bufexplorer.zip
+	cd ${srcdir}
 
-  installpath="$pkgdir/usr/share/vim/vimfiles"
+	mv download_script.php?src_id=$_scriptid bufexplorer.zip
+	bsdtar -xf bufexplorer.zip
+}
 
-  install -D -m644 doc/bufexplorer.txt \
-      $installpath/doc/bufexplorer.txt
+package() {
+	cd ${srcdir}
 
-  install -D -m644 plugin/bufexplorer.vim \
-      $installpath/plugin/bufexplorer.vim
+	installpath="${pkgdir}/usr/share/vim/vimfiles"
 
-  install -D -m644 license.txt \
-      $pkgdir/usr/share/licenses/$pkgname/license.txt
+	install -D -m644 doc/bufexplorer.txt \
+	      $installpath/doc/bufexplorer.txt
+
+	install -D -m644 plugin/bufexplorer.vim \
+	      $installpath/plugin/bufexplorer.vim
+
+	install -D -m644 license.txt \
+	      ${pkgdir}/usr/share/licenses/${pkgname}/license.txt
 }
