--- a/vim-minibufexpl/trunk/PKGBUILD
+++ b/vim-minibufexpl/trunk/PKGBUILD
@@ -1,25 +1,33 @@
 # $Id$
-# Maintainer : Aaron Griffin <aaron@archlinux.org>
+# Contributor: Aaron Griffin <aaron@archlinux.org>
+# Maintainer: Daniel J Griffiths <ghost1227@archlinux.us>
 
 pkgname=vim-minibufexpl
 pkgver=6.3.2
 pkgrel=6
 _scriptid=3640
 pkgdesc="An elegant buffer explorer for vim"
-arch=(i686 x86_64)
+arch=('any')
 url="http://www.vim.org/scripts/script.php?script_id=159"
 license=('custom')
-depends=(vim)
+depends=('vim')
 groups=('vim-plugins')
 source=(http://www.vim.org/scripts/download_script.php?src_id=$_scriptid LICENSE)
 md5sums=('c47a9d844788daa38563c4e33c8f0d6e' 'aa6bc9c176702f23ee9f8476f72e3971')
 
 build() {
-  cd $srcdir
-  mv download_script.php?src_id=$_scriptid minibufexpl.vim
+	cd ${srcdir}
 
-  installpath="$pkgdir/usr/share/vim/vimfiles"
+	mv download_script.php?src_id=$_scriptid minibufexpl.vim
+}
 
-  install -D -m644 minibufexpl.vim $installpath/plugin/minibufexpl.vim || return 1
-  install -D -m644 LICENSE ${pkgdir}/usr/share/licenses/${pkgname}/LICENSE || return 1
+package() {
+	cd ${srcdir}
+
+	installpath="${pkgdir}/usr/share/vim/vimfiles"
+
+	install -D -m644 minibufexpl.vim \
+	   $installpath/plugin/minibufexpl.vim || return 1
+	install -D -m644 LICENSE \
+	   ${pkgdir}/usr/share/licenses/${pkgname}/LICENSE || return 1
 }
