--- a/vim-project/trunk/PKGBUILD
+++ b/vim-project/trunk/PKGBUILD
@@ -1,15 +1,16 @@
 # $Id$
-# Maintainer : Aaron Griffin <aaron@archlinux.org>
+# Contributor: Aaron Griffin <aaron@archlinux.org>
+# Maintainer: Daniel J Griffiths <ghost1227@archlinux.us>
 
 pkgname=vim-project
 pkgver=1.4.1
 _scriptid=6273
-pkgrel=4
+pkgrel=5
 pkgdesc="Organize and navigate projects of files (like an ide/buffer explorer)"
-arch=(i686 x86_64)
+arch=('any')
 url="http://www.vim.org/scripts/script.php?script_id=69"
 license=('custom')
-depends=(vim)
+depends=('vim')
 groups=('vim-plugins')
 install=vimdoc.install
 source=(http://www.vim.org/scripts/download_script.php?src_id=$_scriptid LICENSE)
@@ -17,13 +18,21 @@ md5sums=('95ddb23f0e301a79e869c608a36637de' '64ab6c0d41d5153d51439913d23f71ae')
 
 build()
 {
-  cd $srcdir
-  mv download_script.php?src_id=$_scriptid project-${pkgver}.tar.gz
-  tar xzf project-${pkgver}.tar.gz
+	cd ${srcdir}
 
-  installpath="$pkgdir/usr/share/vim/vimfiles"
+	mv download_script.php?src_id=$_scriptid project-${pkgver}.tar.gz
+	tar xzf project-${pkgver}.tar.gz
+}
 
-  install -D -m644 doc/project.txt $installpath/doc/project.txt || return 1
-  install -D -m644 plugin/project.vim $installpath/plugin/project.vim || return 1
-  install -D -m644 LICENSE ${pkgdir}/usr/share/licenses/${pkgname}/LICENSE || return 1
+package() {
+	cd ${srcdir}
+
+	installpath="${pkgdir}/usr/share/vim/vimfiles"
+
+	install -D -m644 doc/project.txt \
+	   $installpath/doc/project.txt || return 1
+	install -D -m644 plugin/project.vim \
+	   $installpath/plugin/project.vim || return 1
+	install -D -m644 LICENSE \
+	   ${pkgdir}/usr/share/licenses/${pkgname}/LICENSE || return 1
 }
