--- a/vim-taglist/trunk/PKGBUILD
+++ b/vim-taglist/trunk/PKGBUILD
@@ -1,16 +1,17 @@
 #$Id$
-# Maintainer: Aaron Griffin <aaron@archlinux.org>
 # Contributor: Aaron Griffin <aaron@archlinux.org>
+# Maintainer: Daniel J Griffiths <ghost1227@archlinux.us>
 
 pkgname=vim-taglist
 pkgver=45
 _scriptid=7701
-pkgrel=3
+pkgrel=4
 pkgdesc="A source code browser plugin for vim"
-arch=(i686 x86_64)
+arch=('any')
 url="http://vim-taglist.sourceforge.net/"
 license=('custom')
-depends=(vim ctags)
+depends=('vim' 'ctags')
+makedepends=('unzip')
 groups=('vim-plugins')
 install=vimdoc.install
 source=(http://www.vim.org/scripts/download_script.php?src_id=$_scriptid
@@ -18,18 +19,19 @@ source=(http://www.vim.org/scripts/download_script.php?src_id=$_scriptid
 md5sums=('99b5366a64eea6092bb140df7d4c1a95' 'efbd5986e691ce8c876fb86e8f5961ea')
 
 build() {
-  cd $srcdir
-  mv download_script.php?src_id=$_scriptid taglist_$pkgver.zip
-  unzip -qqo taglist_$pkgver.zip
+	cd ${srcdir}
 
-  installpath="$pkgdir/usr/share/vim/vimfiles"
+	mv download_script.php?src_id=$_scriptid taglist_${pkgver}.zip
+	unzip -qqo taglist_${pkgver}.zip
+}
 
-  mkdir -p $installpath/doc/
-  install -m644 doc/taglist.txt $installpath/doc/
+package() {
+	cd ${srcdir}
 
-  mkdir -p $installpath/plugin/
-  install -m644 plugin/taglist.vim $installpath/plugin/
+	installpath="${pkgdir}/usr/share/vim/vimfiles"
 
-  mkdir -p $pkgdir/usr/share/licenses/vim-taglist/
-  install -m644 $srcdir/license.txt $pkgdir/usr/share/licenses/vim-taglist/
+	install -Dm644 doc/taglist.txt $installpath/doc/taglist.txt
+  	install -Dm644 plugin/taglist.vim $installpath/plugin/taglist.vim
+	install -Dm644 ${srcdir}/license.txt \
+	    ${pkgdir}/usr/share/licenses/vim-taglist/license.txt
 }
