--- a/vim-vcscommand/trunk/PKGBUILD
+++ b/vim-vcscommand/trunk/PKGBUILD
@@ -1,10 +1,11 @@
 #$Id$
-#Maintainer: Aaron Griffin <aaron@archlinux.org>
+# Contributor: Aaron Griffin <aaron@archlinux.org>
+# Maintainer: Daniel J Griffiths <ghost1227@archlinux.us>
 
 pkgname=vim-vcscommand
 pkgver=1.99.31
 _scriptid=11049
-pkgrel=1
+pkgrel=2
 pkgdesc="vim cvs/svn integration plugin"
 arch=('any')
 url="http://www.vim.org/scripts/script.php?script_id=90"
@@ -20,14 +21,19 @@ md5sums=('a31418cdb845a6881023330498f1cb06' 'cc76e422214169f380e6a1548f617778')
 sha1sums=('031dd2d9f02a7bc2c5ae68d4ce9edbfac080d7c4' 'a89f765481e070aa82456a48372bb05db9db0910')
 
 build() {
-  cd "$srcdir"
+	/bin/true
+}
 
-  installpath="$pkgdir/usr/share/vim/vimfiles"
-  mkdir -p "$installpath"
-  cp -r doc plugin syntax "$installpath"
+package() {
+	cd ${srcdir}
 
-  #just in case....
-  find "$installpath" -type f -exec chmod 644 {} \;
+	installpath="${pkgdir}/usr/share/vim/vimfiles"
+	mkdir -p $installpath
+	cp -r doc plugin syntax $installpath
 
-  install -D -m644 license.txt "$pkgdir/usr/share/licenses/$pkgname/license.txt"
+	#just in case....
+	find "$installpath" -type f -exec chmod 644 {} \;
+
+	install -D -m644 license.txt \
+	   ${pkgdir}/usr/share/licenses/${pkgname}/license.txt
 }
