--- a/vim-guicolorscheme/trunk/PKGBUILD
+++ b/vim-guicolorscheme/trunk/PKGBUILD
@@ -1,14 +1,15 @@
 # $Id$
-# Maintainer : Aaron Griffin <aaron@archlinux.org>
+# Contributor: Aaron Griffin <aaron@archlinux.org>
+# Maintainer: Daniel J Griffiths <ghost1227@archlinux.us>
 
 pkgname=vim-guicolorscheme
 pkgver=1.2
 _scriptid=10162
 pkgrel=2
 pkgdesc="auto convert gui-only colorschemes to 88/256 color terminal schemes"
-arch=(i686 x86_64)
+arch=('any')
 url="http://www.vim.org/scripts/script.php?script_id=1809"
-depends=(vim)
+depends=('vim')
 license=('GPL')
 groups=('vim-plugins')
 source=(http://www.vim.org/scripts/download_script.php?src_id=$_scriptid)
@@ -16,10 +17,15 @@ md5sums=('6b2cac00ab870106c3c1c5409d799ffa')
 sha256sums=('a30e0c06617def9753a086b80c4c32bfe8fa2fbcd47a8bfc9cb1d9e2e87a4aba')
 
 build() {
-  cd $srcdir
-  mv download_script.php?src_id=$_scriptid guicolorscheme.vim
+	cd ${srcdir}
 
-  installpath="$pkgdir/usr/share/vim/vimfiles"
+	mv download_script.php?src_id=$_scriptid guicolorscheme.vim
+}
 
-  install -D -m644 guicolorscheme.vim $installpath/plugin/guicolorscheme.vim || return 1
+package() {
+	cd ${srcdir}
+	installpath="${pkgdir}/usr/share/vim/vimfiles"
+
+	install -D -m644 guicolorscheme.vim \
+	   $installpath/plugin/guicolorscheme.vim || return 1
 }
