--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -3,21 +3,21 @@
 # Contributor: Charles-Henri d'Adhemar <cdadhemar@gmail.com>
 
 pkgname=babl
-pkgver=0.1.0 
+pkgver=0.1.2
 pkgrel=1
 pkgdesc="Dynamic, any to any, pixel format conversion library"
 arch=('i686' 'x86_64')
 url="http://gegl.org/babl/"
 license=('LGPL3')
-depends=('glibc' )
+depends=('glibc')
 options=('!libtool' '!makeflags')
 source=(ftp://ftp.gtk.org/pub/babl/${pkgver%.*}/${pkgname}-${pkgver}.tar.bz2)
-md5sums=('197133d84fe120ee66c8137dff1696e6')
-sha1sums=('6e95e24c48b8018fefbf8e69ad62f4a4de56640c')
+md5sums=('8eebd8d78d3173db7af5e3e60b1e03ea')
+sha1sums=('1abe98b11e67737b6f74d6993d45046eec93bcda')
 
 build() {
   cd "${srcdir}/${pkgname}-${pkgver}"
   ./configure --prefix=/usr || return 1
   make || return 1
-  make DESTDIR="${pkgdir}" extdir=/usr/lib/babl-0.0 install || return 1
+  make DESTDIR="${pkgdir}" install || return 1
 }
