--- a/qt-doc/trunk/PKGBUILD
+++ b/qt-doc/trunk/PKGBUILD
@@ -3,7 +3,7 @@
 # Contributor: Vinay S Shastry <vinayshastry@gmail.com>
 
 pkgname=qt-doc
-pkgver=4.6.1
+pkgver=4.6.2
 pkgrel=1
 pkgdesc='The Qt gui toolkit documentation'
 arch=('any')
@@ -16,9 +16,13 @@ provides=("qt4-doc=${pkgver}")
 conflicts=("qt4-doc=${pkgver}")
 _pkgfqn="qt-everywhere-opensource-src-${pkgver}"
 source=("ftp://ftp.qtsoftware.com/qt/source/${_pkgfqn}.tar.gz")
-md5sums=('0542a4be6425451ab5f668c6899cac36')
+md5sums=('eb651ee4b157c01696aa56777fc6e0e5')
 
 build() {
+  /bin/true
+}
+
+package(){
   cd ${srcdir}/${_pkgfqn}
   install -d ${pkgdir}/usr/share/doc/qt
   cp -r doc/* ${pkgdir}/usr/share/doc/qt
