--- a/libarchive/trunk/PKGBUILD
+++ b/libarchive/trunk/PKGBUILD
@@ -2,16 +2,15 @@
 # Maintainer: Dan McGee <dan@archlinux.org>
 # Maintainer: Aaron Griffin <aaron@archlinux.org>
 pkgname=libarchive
-pkgver=2.7.1
+pkgver=2.8.0
 pkgrel=1
 pkgdesc="library that can create and read several streaming archive formats"
 arch=(i686 x86_64)
 url="http://libarchive.googlecode.com/"
 license=('BSD')
 groups=('base')
-depends=('zlib' 'bzip2' 'xz-utils' 'acl' 'openssl')
+depends=('zlib' 'bzip2' 'xz-utils' 'acl' 'openssl' 'expat')
 source=(http://libarchive.googlecode.com/files/libarchive-$pkgver.tar.gz)
-sha256sums=('a7e066ef857d3db0211e2d916ca14aafc48a4776c4fa108fd67092ce862a7ba8')
 
 # pacman.static build fails unless we keep the libtool files (or unless we link
 # the missing symbols inside the libarchive .a static lib, but that is dirty)
@@ -19,12 +18,18 @@ options=(libtool)
 
 build() {
   cd $startdir/src/$pkgname-$pkgver
-  ./configure --prefix=/usr
+  ./configure --prefix=/usr --without-xml2
 
   make || return 1
+}
+
+package() {
+  cd $startdir/src/$pkgname-$pkgver
   make DESTDIR=$startdir/pkg install
 
   # install license
   mkdir -p $startdir/pkg/usr/share/licenses/libarchive
   install -m644 COPYING $startdir/pkg/usr/share/licenses/libarchive/
 }
+
+md5sums=('400fd9ba51fffe6c65c75387fffba9d9')
