--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -3,20 +3,19 @@
 # Contributor: damir <damir.archlinux.org>
 
 pkgname=muparser
-pkgver=1.30
+pkgver=1.32
 pkgrel=1
 pkgdesc="a fast math parser library"
 arch=('i686' 'x86_64')
 url="http://muparser.sourceforge.net/"
 depends=('glibc' 'gcc-libs')
 license=('custom')
-source=(http://downloads.sourceforge.net/$pkgname/muparser_v130.tar.gz)
-md5sums=('f6b4d79aa0f762fd4bfeb38f47cf1d15')
+source=(http://downloads.sourceforge.net/$pkgname/muparser_v132.tar.gz)
+md5sums=('9eda5ba73cae7dce09daa6bef6b7c49b')
 
 build() {
-  cd $srcdir/$pkgname
+  cd $srcdir/${pkgname}_v132
   ./configure --prefix=/usr
-  sed -i 's|$(libdir)/pkgconfig|$(DESTDIR)$(libdir)/pkgconfig|g' Makefile
   make || return 1
   make DESTDIR=$pkgdir install
 
