--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -1,9 +1,9 @@
 # $Id$
-# Maintainer: Biru Ionut <ionut@archlinux.ro>
+# Maintainer : Ionut Biru <ibiru@archlinux.org>
 # Contributor: Daniel Balieiro <daniel@balieiro.com>
 # Contributor: Rodrigo L. M. Flores <mail@rodrigoflores.org>
 pkgname=telepathy-gabble
-pkgver=0.8.10
+pkgver=0.8.11
 pkgrel=1
 pkgdesc="A Jabber/XMPP connection manager for Telepathy"
 arch=('i686' 'x86_64')
@@ -23,4 +23,4 @@ build() {
   make || return 1
   make DESTDIR=$pkgdir install || return 1
 }
-md5sums=('d8a3c028698d6424d9fd4673b22e5836')
+md5sums=('3e24415e8af69719faa5ecec2396c90b')
