--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -3,7 +3,7 @@
 # Contributor: Shinlun Hsieh <yngwiexx@yahoo.com.tw>
 # Contributor: Michal Hybner <dta081@gmail.com>
 pkgname=wavpack
-pkgver=4.60.0
+pkgver=4.60.1
 pkgrel=1
 pkgdesc="Audio compression format with lossless, lossy, and hybrid compression modes"
 arch=('i686' 'x86_64')
@@ -12,14 +12,18 @@ license=('custom')
 depends=('glibc')
 options=('!libtool')
 source=(http://www.wavpack.com/${pkgname}-${pkgver}.tar.bz2)
-md5sums=('722f90393b292cd1413e8af8250a3783')
+md5sums=('7bb1528f910e4d0003426c02db856063')
 
 build() {
-  cd ${startdir}/src/${pkgname}-${pkgver}
-  ./configure --prefix=/usr --enable-mmx --disable-static || return 1
-  make || return 1
-  make DESTDIR=${startdir}/pkg install || return 1
-  install -m755 -d ${pkgdir}/usr/share/licenses/${pkgname}
-  install -m644 license.txt ${pkgdir}/usr/share/licenses/${pkgname}/ || return 1
-  rm -f ${startdir}/pkg/usr/lib/*.a
+	cd ${srcdir}/${pkgname}-${pkgver}
+	./configure --prefix=/usr --enable-mmx --disable-static || return 1
+	make || return 1
+}
+
+package() {
+	cd ${srcdir}/${pkgname}-${pkgver}
+	make DESTDIR=${pkgdir} install || return 1
+	install -m755 -d ${pkgdir}/usr/share/licenses/${pkgname}
+	install -m644 license.txt ${pkgdir}/usr/share/licenses/${pkgname}/ || return 1
+	rm -f ${pkgdir}/usr/lib/*.a
 }
