--- a/cddb_get/trunk/PKGBUILD
+++ b/cddb_get/trunk/PKGBUILD
@@ -1,29 +1,25 @@
 # $Id$
+# Maintainer:
 # Contributor Sarah Hay <sarahhay@mb.sympatico.ca>
-# Maintainer: dorphell <dorphell@archlinux.org>
 
 pkgname=cddb_get
 _realname=CDDB_get
 pkgver=2.27
-pkgrel=3
-pkgdesc="This module/script gets the CDDB info for an audio cd."
+pkgrel=4
+pkgdesc="Fetches CDDB info for an audio cd."
+arch=('any')
+url="http://armin.emx.at/cddb/"
 license=('GPL' 'PerlArtistic')
-arch=("i686" "x86_64")
 depends=('perl>=5.10.0')
-options=(!emptydirs)
+options=('!emptydirs')
 source=(http://armin.emx.at/cddb/${_realname}-${pkgver}.tar.gz)
 md5sums=('405a3704ad5db45f117cc7cc5bd1ce7c')
-url="http://armin.emx.at/cddb/"
 sha1sums=('cec39851678bbb1fdd76f2cbd170628baf4971e6')
 
 build() {
-  cd ${startdir}/src/${_realname}-${pkgver}
+  cd ${srcdir}/${_realname}-${pkgver}
   # install module in vendor directories.
-  perl Makefile.PL INSTALLDIRS=vendor || return 1
+  perl Makefile.PL INSTALLDIRS=vendor INSTALLVENDORSCRIPT=/usr/bin || return 1
   make  || return 1
-  make DESTDIR=${startdir}/pkg install || return 1
-
-  # remove perllocal.pod and .packlist
-  find ${startdir}/pkg -name perllocal.pod -delete
-  find ${startdir}/pkg -name .packlist -delete
+  make DESTDIR=${pkgdir} install || return 1
 }
