--- a/nuvexport/trunk/PKGBUILD
+++ b/nuvexport/trunk/PKGBUILD
@@ -5,21 +5,21 @@
 # Contributor: Jeremy Sands <cto@jeremysands.com>
 
 pkgname=nuvexport
-pkgver=20090413
-relnum=0.5
+pkgver=23562
 pkgrel=1
-pkgdesc="Export for MythTV nuv files to other formats (DVD/SVCD/DivX,etc.)"
-arch=('i686' 'x86_64')
+pkgdesc="Export MythTV .nuv and .mpeg files to other formats"
+arch=('any')
 url="http://forevermore.net/files/nuvexport"
 license=('GPL')
-depends=('ffmpeg>=0.5' 'perl-dbd-mysql' 'perl-date-manip')
+depends=('ffmpeg' 'mplayer' 'id3lib' 'transcode' 'perl-dbd-mysql' 'perl-date-manip')
 backup=('etc/nuvexportrc')
-install=${pkgname}.install
-source=(http://forevermore.net/files/nuvexport/${pkgname}-$relnum-0.$pkgver.svn.tar.bz2)
-md5sums=('b6e4d973c5b53fb4dd2ba7e04b599496')
+options=('force')
+install=nuvexport.install
+source=(ftp://ftp.archlinux.org/other/mythtv/${pkgname}-${pkgver}.tar.gz)
+md5sums=('d39a25bb14ed464fe39d51c69420601b')
 
 build() {
-  cd "${srcdir}/${pkgname}-${relnum}"
+  cd "${srcdir}/${pkgname}"
 
   make INSTALL=/bin/install prefix="${pkgdir}/usr" sysconfdir="${pkgdir}/etc" install || return 1
   sed -i "s|/tmp/fifodir|/var/tmp/fifodir|g" ${pkgdir}/usr/share/nuvexport/export/*.pm || return 1
