--- a/xfce4-verve-plugin/trunk/PKGBUILD
+++ b/xfce4-verve-plugin/trunk/PKGBUILD
@@ -1,26 +1,25 @@
 # $Id$
-# Maintainer: aurelien <aurelien@archlinux.org>
+# Maintainer:
 # Contributor: Tobias Kieslich <tobias (at) archlinux.org>
 
-pkgname=verve-plugin
+pkgname=xfce4-verve-plugin
 pkgver=0.3.5
-pkgrel=4
+pkgrel=1
 pkgdesc="command line plugin Xfce4 panel"
-arch=(i686 x86_64)
+arch=('i686' 'x86_64')
 license=('GPL2')
 url="http://xfce-goodies.berlios.de/"
 groups=('xfce4-goodies')
 depends=('xfce4-panel' 'pcre' 'exo' 'dbus')
-makedepends=('pkgconfig')
-options=('!libtool')
-replaces=('xfce4-minicmd-plugin')
-source=(http://goodies.xfce.org/releases/${pkgname}/${pkgname}-${pkgver}.tar.bz2)
+makedepends=('pkgconfig' 'perlxml')
+replaces=('verve-plugin')
+source=(http://goodies.xfce.org/releases/verve-plugin/verve-plugin-${pkgver}.tar.bz2)
 md5sums=('85701b960da6bb10762b460c23b84c15')
 
 build() {
-  cd ${startdir}/src/${pkgname}-${pkgver}
+  cd ${srcdir}/verve-plugin-${pkgver}
   ./configure --prefix=/usr --sysconfdir=/etc --libexecdir=/usr/lib/xfce4 \
     --localstatedir=/var --disable-static
   make || return 1
-  make DESTDIR=${startdir}/pkg install
+  make DESTDIR=${pkgdir} install
 }
